# DRIVE_beta_rc1

./: .gitignore  CHANGELOG.md  Compare_Output_CLI.py  DRIVE.py  FindIndPedigree.py  IBD_compare_output_classes.py  IBD_compare_output_full.py  IBDinput_byBP-rewrite.py  IBDinput_byBP_classes.py  IIDFindFunction.py  IdentifyingID.py  MEGA_ID.py  Makefile  MultipleVariantID.py  NetworkSize.py  README.md  SearchPedigree.py  Shared_segment_Formatter_CLI.py  VariantID.py  allele_count.py  check_directory.py  create_networks.py  csv_dict_writer.py  csv_writer_class.py  example.env  file_exist_checker.py  get_haplotype.py  get_iid_pairs.py  haplotype.py  haplotype_main.py  identify_multi_var_carriers.py  identify_single_var_carrier.py  install.sh  maf_determination.py  network_creator_class.py  network_ids.py  plink_haplotype.py  plink_ilash_R234283026_R271177406_2374549.0_4202562.0.ped  plink_python_run.py  population_filter.py  (+8 more)
DRIVE/: DRIVE.py
allele_frequency_analysis_scripts/: __init__.py  maf_determination.py
analysis_haplotypes/: __init__.py  analyses_haplotype.py  cli.py  compare_haplotype.py  compare_haplotypes.py  run_plink.py  unit_test.py
carrier_analysis_scripts/: identify_multi_var_carriers.py  identify_single_var_carrier.py
collect_phenotype_info/: __init__.py  load_phenotype_file.py
create_network_scripts/: __init__.py  create_networks.py  network_creator_class.py
drive/: DRIVE.py
file_creator_scripts/: check_directory.py  csv_writer_class.py  file_exist_checker.py
full_analysis/: README.md  all_genotype.py
gnomad_webscrapper/: README.md  (+2 more)
(+180 files in other folders)
